--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 .env
 # upload folder only
 !.gitkeep
+
+
+# whu-library-seat
+# ssl certificates
+nginx/ssl/*
+# binary
+nginx/assets/*
+# logs
+nginx/logs/*
