--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,12 +55,12 @@ services:
       - /opt/seafile-db:/var/lib/mysql
     networks:
       - seafile-network
-  # seafile-memcached:
-  #   image: memcached:1.5.6
-  #   container_name: seafile-memcached
-  #   entrypoint: memcached -m 256
-  #   networks:
-  #     - seafile-network
+  seafile-memcached:
+    image: memcached:1.5.6
+    container_name: seafile-memcached
+    entrypoint: memcached -m 256
+    networks:
+      - seafile-network
   seafile:
     image: seafileltd/seafile-mc:latest
     container_name: seafile
@@ -75,7 +75,7 @@ services:
       - SEAFILE_SERVER_LETSENCRYPT=false
     depends_on:
       - seafile-db
-      # - seafile-memcached
+      - seafile-memcached
     volumes:
       - seafile-db-v:/shared
     networks:
