--- a/nginx/conf.d/seafile.conf
+++ b/nginx/conf.d/seafile.conf
@@ -5,7 +5,7 @@ server {
     server_name pan.cs-tao.cc;
 
     location / {
-        proxy_pass http://seafile:$server_port/;
+        proxy_pass http://seafile:$remote_port/;
     }
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem; # managed by Certbot
