--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,8 +66,8 @@ services:
       - CER_BOT_EMAIL=${NGINX_SSL_EMAIL}
     restart: always
     ports:
+      - ${NGINX_PORT}:80
       - ${NGINX_SSL_PORT}:443
-      - ${NGINX_SHADOWSOCKS_PORT}:1984
     volumes:
       - ./nginx/ssl/:/etc/nginx/ssl/:ro
       - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
