--- a/nginx/conf.d/shadowsocks.conf
+++ b/nginx/conf.d/shadowsocks.conf
@@ -1,12 +1,12 @@
 # shadowsocks
 server {
+    listen 80;
     resolver 8.8.8.8;
-    listen  1984;
+    server_name world.cs-tao.cc;
     location / {
         proxy_pass http://shadowsocks/;
+        proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header Host $http_host;
-        proxy_buffers 256 4k;
-        proxy_max_temp_file_size 0k;
     }
 
     access_log      /var/log/nginx/shadowsocks.cs-tao.cc.access.log;
