Add NGINX_PORT env

--- a/ci.env
+++ b/ci.env
@@ -11,5 +11,6 @@ SHADOWSOCKS_PASSWD=1234
 # nginx env
 NGINX_SSL_DOMAIN=test.com
 NGINX_SSL_EMAIL=ci@test.com
+NGINX_PORT=11122
 NGINX_SSL_PORT=11111
 NGINX_SHADOWSOCKS_PORT=22222
