Use ssr instead ss

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,11 @@
 # upload folder only
 !.gitkeep
 
-
 # whu-library-seat
 # ssl certificates
 nginx/ssl/*
 # binary
 nginx/assets/*
+!nginx/assets/404/
 # logs
 nginx/logs/*
