--- a/nginx/conf.d/seat.conf
+++ b/nginx/conf.d/seat.conf
@@ -74,6 +74,11 @@ server {
 
 # assets
 server {
+    listen 80;
+    server_name assets.cs-tao.cc;
+    rewrite ^(.*)$ https://${server_name}$1 permanent; 
+}
+server {
     listen 443 ssl;
 
     server_name assets.cs-tao.cc;
