Add portainer service

--- a/ci.env
+++ b/ci.env
@@ -13,3 +13,7 @@ SSR_PROTOCOL_PARAM=4#1:passwd1
 
 # nginx env
 NGINX_SSL_PORT=11111
+
+# portainer env
+# run `docker run --rm httpd:2.4-alpine htpasswd -nbB admin <password> | cut -d ":" -f 2` to generate
+PORTAINER_ADMIN_PASSWD_HASHED=$2y$05$.GDofRFLsEhjmr.at4hiYOTUYXRuubWaP/n3tl4Gj0IbSZ42G51WK
