--- a/nginx/conf.d/portainer.conf
+++ b/nginx/conf.d/portainer.conf
@@ -1,4 +1,4 @@
-# seat-records
+# portainer
 server {
     listen 80;
     server_name docker.cs-tao.cc;
@@ -29,6 +29,6 @@ server {
     fastcgi_param   HTTPS               on;
     fastcgi_param   HTTP_SCHEME         https;
 
-    access_log      /var/log/nginx/seat-records.cs-tao.cc.access.log;
-    error_log       /var/log/nginx/seat-records.cs-tao.cc.error.log;
+    access_log      /var/log/nginx/docker.cs-tao.cc.access.log;
+    error_log       /var/log/nginx/docker.cs-tao.cc.error.log;
 }
