--- a/nginx/conf.d/ssr.conf
+++ b/nginx/conf.d/ssr.conf
@@ -32,6 +32,6 @@ server {
     fastcgi_param   HTTPS               on;
     fastcgi_param   HTTP_SCHEME         https;
 
-    access_log      /var/log/nginx/seat-records.cs-tao.cc.access.log;
-    error_log       /var/log/nginx/seat-records.cs-tao.cc.error.log;
+    access_log      /var/log/nginx/world.cs-tao.cc.access.log;
+    error_log       /var/log/nginx/world.cs-tao.cc.error.log;
 }
