--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,10 +118,16 @@ services:
 
 volumes:
   seat-db-v:
+    name: seat-db-data
   portainer-v:
+    name: portainer-data
 
 networks:
   seat-network:
+    name: seat-network
   ssr-network:
+    name: ssr-network
   portainer-network:
+    name: portainer-network
   gallery-network:
+    name: gallery-network
