Split nginx config files

--- a/nginx/conf.d/seat-ghauth.conf
+++ b/nginx/conf.d/seat-ghauth.conf
@@ -1,19 +1,21 @@
-# shadowsocks
+# seat-ghauth
 server {
     listen 80;
-    server_name world.cs-tao.cc;
+    server_name seat-ghauth.cs-tao.cc;
     rewrite ^(.*)$ https://${server_name}$1 permanent; 
 }
 
 server {
     listen 443 ssl;
-    server_name world.cs-tao.cc;
 
-    root /home/nginx/assets/ssr/;
-    index index.html;
+    server_name seat-ghauth.cs-tao.cc;
 
-    location ~* \.(jpg|jpeg|png|gif|ico|(css|js)(\?v=.*)?)$ {
-       expires 60d;
+    location / {
+        proxy_pass http://seat-ghauth:3002/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
     }
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem; # managed by Certbot
@@ -32,6 +34,6 @@ server {
     fastcgi_param   HTTPS               on;
     fastcgi_param   HTTP_SCHEME         https;
 
-    access_log      /var/log/nginx/world.cs-tao.cc.access.log;
-    error_log       /var/log/nginx/world.cs-tao.cc.error.log;
+    access_log      /var/log/nginx/seat-ghauth.cs-tao.cc.access.log;
+    error_log       /var/log/nginx/seat-ghauth.cs-tao.cc.error.log;
 }
