--- a/nginx/conf.d/assets.conf
+++ b/nginx/conf.d/assets.conf
@@ -1,19 +1,19 @@
-# shadowsocks
+
+# assets
 server {
     listen 80;
-    server_name world.cs-tao.cc;
+    server_name assets.cs-tao.cc;
     rewrite ^(.*)$ https://${server_name}$1 permanent; 
 }
 
 server {
     listen 443 ssl;
-    server_name world.cs-tao.cc;
 
-    root /home/nginx/assets/ssr/;
-    index index.html;
+    server_name assets.cs-tao.cc;
 
-    location ~* \.(jpg|jpeg|png|gif|ico|(css|js)(\?v=.*)?)$ {
-       expires 60d;
+    location / {
+        root /home/nginx/assets/;
+        autoindex on;
     }
 
     ssl_certificate /etc/nginx/ssl/fullchain.pem; # managed by Certbot
@@ -32,6 +32,6 @@ server {
     fastcgi_param   HTTPS               on;
     fastcgi_param   HTTP_SCHEME         https;
 
-    access_log      /var/log/nginx/world.cs-tao.cc.access.log;
-    error_log       /var/log/nginx/world.cs-tao.cc.error.log;
+    access_log      /var/log/nginx/assets.cs-tao.cc.access.log;
+    error_log       /var/log/nginx/assets.cs-tao.cc.error.log;
 }
