--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.5'
 
 services:
-  # whu-library-seat (3 services)
+  # seat (3 services)
   seat-db:
     image: mysql:8.0.17
     container_name: seat-db
@@ -19,7 +19,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${SEAT_DB_ROOT_PASSWD}
     volumes:
       - seat-db-v:/var/lib/mysql/
-      - ./whu-library-seat/db_init_scripts/:/docker-entrypoint-initdb.d/
+      - ./seat/db_init_scripts/:/docker-entrypoint-initdb.d/
     networks:
       - seat-network
   seat-recorder:
@@ -72,49 +72,51 @@ services:
     networks:
       - gallery-network
 
-  # global nginx
-  nginx:
-    image: nginx:latest
-    container_name: global-nginx
+  # v2ray
+  v2ray:
+    image: docker.pkg.github.com/cs-tao/docker-v2ray/docker-v2ray:master
+    container_name: v2ray
+    environment:
+      TIME_ZONE: ${TIME_ZONE}
+      CLIENTS_IDS: ${V2RAY_CLIENTS_IDS}
+      CLIENTS_LEVELS: ${V2RAY_CLIENTS_LEVELS}
+      CLIENTS_ALTERIDS: ${V2RAY_CLIENTS_ALTERIDS}
+      CLIENTS_EMAILS: ${V2RAY_CLIENTS_EMAILS}
+    restart: always
+    volumes:
+      - ./v2ray/config.tmpl:/etc/v2ray/config.tmpl:ro
+      - ./v2ray/logs/:/var/log/v2ray/
+    networks:
+      - v2ray-network
+
+  # caddy
+  caddy:
+    image: abiosoft/caddy
+    container_name: caddy
     environment:
       - TIME_ZONE=${TIME_ZONE}
+      - ACME_AGREE=true
     restart: always
     ports:
-      - ${NGINX_SSL_PORT}:443
+      - ${CADDY_PORT}:80
+      - ${CADDY_SSL_PORT}:443
     volumes:
-      - ./nginx/ssl/:/etc/nginx/ssl/:ro
-      - ./nginx/conf.d/:/etc/nginx/conf.d/:ro
-      - ./nginx/assets/:/home/nginx/assets/
-      - ./nginx/logs/:/var/log/nginx/
+      - ./caddy/Caddyfile:/etc/Caddyfile:ro
+      - ./caddy/caddyfile.d/:/etc/caddyfile.d/:ro
+      - ./caddy/ssl/:/root/.caddy/
+      - ./caddy/www/:/var/www/:ro
+      - ./caddy/logs/:/var/logs/
     depends_on:
       - seat-recorder
       - seat-ghauth
       - portainer
       - gallery
+      - v2ray
     networks:
       - seat-network
-      - ssr-network
       - portainer-network
       - gallery-network
-
-  # ssr (1 service)
-  ssr:
-    image: docker.pkg.github.com/gis-hacker/ssr-docker/ssr-docker:master
-    container_name: ssr
-    restart: always
-    environment:
-      - TIME_ZONE=${TIME_ZONE}
-      - PASSWORD=${SSR_PASSWD}
-      - PROTOCOL_PARAM=${SSR_PROTOCOL_PARAM}
-      - REDIRECT=nginx:80
-    volumes:
-      - ./ssr/config.tmpl:/app/config.tmpl:ro
-    ports:
-      - ${SSR_PORT}:80
-    depends_on:
-      - nginx
-    networks:
-      - ssr-network
+      - v2ray-network
 
 volumes:
   seat-db-v:
@@ -125,8 +127,8 @@ volumes:
 networks:
   seat-network:
     name: seat-network
-  ssr-network:
-    name: ssr-network
+  v2ray-network:
+    name: v2ray-network
   portainer-network:
     name: portainer-network
   gallery-network:
