Add v2ray-info service

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ gallery/images/*
 
 # v2ray
 v2ray/logs/*
+v2ray/info/*
+!v2ray/info/start.sh
+!v2ray/info/json2vmess.py
+!v2ray/info/index.js
 
 # upload folder only
 !.gitkeep
