--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,16 +16,15 @@ jobs:
         chmod +x docker-compose
         sudo mv docker-compose /usr/local/bin
     - name: Pull images
-      env:
-        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        GITHUB_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
       run: |
         cp ci.env .env
-        docker login -u cstao -p ${DOCKER_PASSWORD}
-        docker login docker.pkg.github.com -u CS-Tao -p ${GITHUB_PASSWORD}
+        docker login docker.pkg.github.com -u CS-Tao -p ${{ secrets.GITHUB_TOKEN }}
         docker-compose pull
     - name: Run containers
-      run: docker-compose up -d
+      run: |
+        docker-compose up -d
+        sleep 10s
+        docker logs v2ray-info
     - name: Generate compose graph
       run: |
         mkdir ci
