Show v2ray info

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,10 @@ jobs:
     - name: Run containers
       run: |
         docker-compose up -d
+    - name: Show v2ray info
+      run: |
         sleep 10s
-        docker logs v2ray-info
+        cat v2ray/info/output.txt
     - name: Generate compose graph
       run: |
         mkdir ci
