--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,7 +120,7 @@ services:
       - ./caddy/Caddyfile:/etc/Caddyfile:ro
       - ./caddy/caddyfile.d/:/etc/caddyfile.d/:ro
       - ./caddy/ssl/:/root/.caddy/
-      - ./caddy/www/:/var/www/:ro
+      - ./caddy/www/:/srv/:ro
       - ./caddy/logs/:/var/logs/
     depends_on:
       - seat-recorder
