Fix assets path

--- a/caddy/caddyfile.d/assets.conf
+++ b/caddy/caddyfile.d/assets.conf
@@ -1,7 +1,7 @@
 assets.cs-tao.cc {
   log /var/logs/assets.log
   tls whucstao@gmail.com
-  root /var/www/assets
+  root /srv/assets
   gzip
   browse
 }
