--- a/caddy/caddyfile.d/v2ray.conf
+++ b/caddy/caddyfile.d/v2ray.conf
@@ -1,7 +1,7 @@
 world.cs-tao.cc {
   log /var/logs/v2ray.log
   tls whucstao@gmail.com
-  root /var/www/v2ray
+  root /srv/v2ray
   gzip
   proxy /ws v2ray:80 {
     websocket
