Use envs in Caddyfile

--- a/caddy/caddyfile.d/assets.conf
+++ b/caddy/caddyfile.d/assets.conf
@@ -1,6 +1,6 @@
-assets.cs-tao.cc {
+{$DOMAIN_ASSETS} {
   log /var/logs/assets.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   root /srv/assets
   gzip
   browse
