--- a/caddy/caddyfile.d/gallery.conf
+++ b/caddy/caddyfile.d/gallery.conf
@@ -1,6 +1,6 @@
-gallery.cs-tao.cc {
+{$DOMAIN_GALLERY} {
   log /var/logs/gallery.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   gzip
   proxy / gallery:80
 }
