--- a/caddy/caddyfile.d/portainer.conf
+++ b/caddy/caddyfile.d/portainer.conf
@@ -1,6 +1,6 @@
-docker.cs-tao.cc {
+{$DOMAIN_PORTAINER} {
   log /var/logs/docker.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   gzip
   proxy / portainer:9000
 }
