--- a/caddy/caddyfile.d/seat-ghauth.conf
+++ b/caddy/caddyfile.d/seat-ghauth.conf
@@ -1,6 +1,6 @@
-seat-ghauth.cs-tao.cc {
+{$DOMAIN_SEAT_GHAUTH} {
   log /var/logs/seat-ghauth.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   gzip
   proxy / seat-ghauth:3002
 }
