--- a/caddy/caddyfile.d/seat-recorder.conf
+++ b/caddy/caddyfile.d/seat-recorder.conf
@@ -1,6 +1,6 @@
-seat-records.cs-tao.cc {
+{$DOMAIN_SEAT_RECORDER} {
   log /var/logs/seat-records.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   gzip
   proxy / seat-recorder:3001
 }
