--- a/caddy/caddyfile.d/v2ray.conf
+++ b/caddy/caddyfile.d/v2ray.conf
@@ -1,9 +1,9 @@
-world.cs-tao.cc {
+{$DOMAIN_V2RAY} {
   log /var/logs/v2ray.log
-  tls whucstao@gmail.com
+  tls {$CADDY_TLS_EMAIL}
   root /srv/v2ray
   gzip
-  proxy /ws v2ray:80 {
+  proxy {$V2RAY_WS_PATH} v2ray:80 {
     websocket
     header_upstream -Origin
   }
