--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,13 +82,10 @@ services:
 
   # v2ray (2 services)
   v2ray:
-    image: cstao/docker-v2ray
+    image: cstao/docker-v2ray:v2.0.0
     container_name: v2ray
     environment:
-      CLIENTS_IDS: ${V2RAY_CLIENTS_IDS}
-      CLIENTS_LEVELS: ${V2RAY_CLIENTS_LEVELS}
-      CLIENTS_ALTERIDS: ${V2RAY_CLIENTS_ALTERIDS}
-      CLIENTS_EMAILS: ${V2RAY_CLIENTS_EMAILS}
+      REPLACEMENTS: ${V2RAY_REPLACEMENTS}
     command: ["bash", "-c", "/etc/v2ray/start.sh"]
     restart: always
     volumes:
@@ -117,6 +114,13 @@ services:
     container_name: caddy
     environment:
       ACME_AGREE: "true"
+      DOMAIN_ASSETS: ${CADDY_DOMAIN_ASSETS}
+      DOMAIN_GALLERY: ${CADDY_DOMAIN_GALLERY}
+      DOMAIN_PORTAINER: ${CADDY_DOMAIN_PORTAINER}
+      DOMAIN_SEAT_GHAUTH: ${CADDY_DOMAIN_SEAT_GHAUTH}
+      DOMAIN_SEAT_RECORDER: ${CADDY_DOMAIN_SEAT_RECORDER}
+      DOMAIN_V2RAY: ${CADDY_DOMAIN_V2RAY}
+      V2RAY_WS_PATH: ${CADDY_V2RAY_WS_PATH}
     restart: always
     ports:
       - ${CADDY_PORT}:80
