--- a/ci.env
+++ b/ci.env
@@ -3,7 +3,7 @@ SEAT_DB_ROOT_PASSWD=1234
 SEAT_GHAUTH_CLIENT_SCERET=1234567898765432123456789876543212345678
 
 # v2ray env
-V2RAY_REPLACEMENTS={UUID_1}:34bcd931-f164-464f-b603-20ba91f70886,{UUID_2}:87e6aca9-0a58-46fc-98b3-81889ac2958a,{UUID_3}:220e2439-f721-4dba-b0fe-cfebe88c4568,{WS_PATH}:/ci
+V2RAY_REPLACEMENTS={UUID_1}:34bcd931-f164-464f-b603-20ba91f70886,{UUID_2}:87e6aca9-0a58-46fc-98b3-81889ac2958a,{UUID_3}:220e2439-f721-4dba-b0fe-cfebe88c4568,{WS_PATH}:\/ci
 
 # caddy env
 CADDY_PORT=11111
