--- a/caddy/caddyfile.d/portainer.conf
+++ b/caddy/caddyfile.d/portainer.conf
@@ -1,6 +1,6 @@
 {$DOMAIN_PORTAINER} {
   log /var/logs/docker.log
-  tls {$CADDY_TLS_EMAIL}
+  tls {$TLS_EMAIL}
   gzip
   proxy / portainer:9000
 }
