--- a/caddy/caddyfile.d/seat-ghauth.conf
+++ b/caddy/caddyfile.d/seat-ghauth.conf
@@ -1,6 +1,6 @@
 {$DOMAIN_SEAT_GHAUTH} {
   log /var/logs/seat-ghauth.log
-  tls {$CADDY_TLS_EMAIL}
+  tls {$TLS_EMAIL}
   gzip
   proxy / seat-ghauth:3002
 }
