--- a/caddy/caddyfile.d/v2ray.conf
+++ b/caddy/caddyfile.d/v2ray.conf
@@ -1,6 +1,6 @@
 {$DOMAIN_V2RAY} {
   log /var/logs/v2ray.log
-  tls {$CADDY_TLS_EMAIL}
+  tls {$TLS_EMAIL}
   root /srv/v2ray
   gzip
   proxy {$V2RAY_WS_PATH} v2ray:80 {
