Upgrade caddy to version 2

--- a/caddy/caddyfile.d/assets.conf
+++ b/caddy/caddyfile.d/assets.conf
@@ -1,7 +1,9 @@
 {$DOMAIN_ASSETS} {
-  log /var/logs/assets.log
-  tls {$TLS_EMAIL}
-  root /srv/assets
-  gzip
-  browse
+  log {
+    output file /var/logs/assets.log
+  } 
+  tls {$CADDY_TLS_EMAIL}
+  root * /srv/assets
+  encode gzip
+  file_server * browse
 }
