--- a/caddy/caddyfile.d/gallery.conf
+++ b/caddy/caddyfile.d/gallery.conf
@@ -1,6 +1,10 @@
 {$DOMAIN_GALLERY} {
-  log /var/logs/gallery.log
-  tls {$TLS_EMAIL}
-  gzip
-  proxy / gallery:80
+  log {
+    output file /var/logs/gallery.log
+  } 
+  tls {$CADDY_TLS_EMAIL}
+  encode gzip
+  reverse_proxy * {
+    to gallery:80
+  }
 }
