--- a/caddy/caddyfile.d/portainer.conf
+++ b/caddy/caddyfile.d/portainer.conf
@@ -1,6 +1,10 @@
 {$DOMAIN_PORTAINER} {
-  log /var/logs/docker.log
-  tls {$TLS_EMAIL}
-  gzip
-  proxy / portainer:9000
+  log {
+    output file /var/logs/docker.log
+  } 
+  tls {$CADDY_TLS_EMAIL}
+  encode gzip
+  reverse_proxy * {
+    to portainer:9000 
+  }
 }
