--- a/caddy/caddyfile.d/seat-recorder.conf
+++ b/caddy/caddyfile.d/seat-recorder.conf
@@ -1,6 +1,10 @@
 {$DOMAIN_SEAT_RECORDER} {
-  log /var/logs/seat-records.log
-  tls {$TLS_EMAIL}
-  gzip
-  proxy / seat-recorder:3001
+  log {
+    output file /var/logs/seat-records.log
+  }
+  tls {$CADDY_TLS_EMAIL}
+  encode gzip
+  reverse_proxy * {
+    to seat-recorder:3001
+  }
 }
