--- a/caddy/caddyfile.d/v2ray.conf
+++ b/caddy/caddyfile.d/v2ray.conf
@@ -1,10 +1,11 @@
 {$DOMAIN_V2RAY} {
-  log /var/logs/v2ray.log
-  tls {$TLS_EMAIL}
-  root /srv/v2ray
-  gzip
-  proxy {$V2RAY_WS_PATH} v2ray:80 {
-    websocket
-    header_upstream -Origin
+  log {
+    output file /var/logs/v2ray.log
+  }
+  tls {$CADDY_TLS_EMAIL}
+  root * /srv/v2ray
+  encode gzip
+  reverse_proxy {$V2RAY_WS_PATH} v2ray:80 {
+    header_up -Origin
   }
 }
