--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -119,7 +119,7 @@ services:
 
   # caddy
   caddy:
-    image: abiosoft/caddy
+    image: caddy
     container_name: caddy
     environment:
       ACME_AGREE: "true"
@@ -131,13 +131,14 @@ services:
       DOMAIN_SEAT_RECORDER: ${CADDY_DOMAIN_SEAT_RECORDER}
       DOMAIN_V2RAY: ${CADDY_DOMAIN_V2RAY}
       V2RAY_WS_PATH: ${CADDY_V2RAY_WS_PATH}
+      CADDY_TLS_EMAIL: ${CADDY_TLS_EMAIL}
     restart: unless-stopped
     ports:
       - ${CADDY_PORT}:80
       - ${CADDY_SSL_PORT}:443
     volumes:
-      - ./caddy/Caddyfile:/etc/Caddyfile:ro
-      - ./caddy/caddyfile.d/:/etc/caddyfile.d/:ro
+      - ./caddy/Caddyfile:/etc/caddy/Caddyfile:ro
+      - ./caddy/caddyfile.d/:/etc/caddy/caddyfile.d/:ro
       - ./caddy/ssl/:/root/.caddy/
       - ./caddy/www/:/srv/:ro
       - ./caddy/logs/:/var/logs/
